--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../static/mines/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>MINES</title>
   <style type="text/css" id="operaUserStyle"></style>
 </head>
@@ -33,29 +33,29 @@
 </a>
 
 <div class="item-traps select-index-box">
-  <img src="../static/mines/resource/bomb.png" alt="">
+  <img src="bomb.png" alt="">
   <a id="select-index">3</a>
 </div>
 
 <div class="header">
-  <img class="img-footer" src="../static/mines/resource/footer.webp" alt="footer">
+  <img class="img-footer" src="footer.webp" alt="footer">
 </div>
 
 <div class="container">
   <div class="crack crack1" style="left: 42vw; top: 2vh; rotate: 95deg; scale: 1.5;">
-    <img src="../static/mines/resource/crack2.svg" alt="crack">
+    <img src="crack1.svg" alt="crack">
   </div>
   <div class="crack crack2" style="left: 0vw; top: 34vh; rotate: 360deg;">
-    <img src="../static/mines/resource/crack2.svg" alt="crack">
+    <img src="crack1.svg" alt="crack">
   </div>
   <div class="crack crack3" style="left: 81vw; rotate: 227deg;">
-    <img src="../static/mines/resource/crack1.svg" alt="crack">
+    <img src="crack1.svg" alt="crack">
   </div>
   <div class="crack particles1" style="top: 21vh; left: 2vw; scale: 1.5;">
-    <img src="../static/mines/resource/particles.svg" alt="crack">
+    <img src="particles.svg" alt="crack">
   </div>
   <div class="crack particles2" style="top: 39vh; left: 82vw; rotate: 288deg;">
-    <img src="../static/mines/resource/particles.svg" alt="crack">
+    <img src="particles.svg" alt="crack">
   </div>
 
   <div class="text-top">
@@ -66,27 +66,27 @@
   <div style="justify-content: center; display: flex; vertical-align: middle;">
     <div class="game-screen">
       <div class="screen-active" id="main-screen">
-        <img draggable="false" id="screenStart" class="screenStart" src="../static/mines/resource/Mines.png" alt="start">
-        <img draggable="false" src="../static/mines/resource/loading.gif" alt="loading" id="loading" class="loading deactive">
+        <img draggable="false" id="screenStart" class="screenStart" src="Mines.png" alt="start">
+        <img draggable="false" src="loading.gif" alt="loading" id="loading" class="loading deactive">
         <canvas class="img-signal deactive" id="canvas"></canvas>
       </div>
 
       <div class="screen-active" id="traps-screen" style="display: none">
         <div class="traps-screen">
           <div class="item-traps" onclick="handleClick(this)">
-            <img src="../static/mines/resource/bomb.png">
+            <img src="bomb.png">
             <a>1</a>
           </div>
           <div class="item-traps" onclick="handleClick(this)">
-            <img src="../static/mines/resource/bomb.png">
+            <img src="bomb.png">
             <a>3</a>
           </div>
           <div class="item-traps" onclick="handleClick(this)">
-            <img src="../static/mines/resource/bomb.png">
+            <img src="bomb.png">
             <a>5</a>
           </div>
           <div class="item-traps" onclick="handleClick(this)">
-            <img src="../static/mines/resource/bomb.png">
+            <img src="bomb.png">
             <a>7</a>
           </div>
         </div>
@@ -95,10 +95,10 @@
   </div>
 
   <div class="crack crack4" style="rotate: 40deg;">
-    <img src="../static/mines/resource/crack1.svg" alt="crack">
+    <img src="crack1.svg" alt="crack">
   </div>
   <div class="crack" style="left: 76vw; bottom: 30vh; rotate: 327deg; scale: 1.5;">
-    <img src="../static/mines/resource/particles.svg" alt="crack">
+    <img src="particles.svg" alt="crack">
   </div>
 
   <div class="game-button">
@@ -112,11 +112,11 @@
 </div>
 
 <div class="footer">
-  <img class="img-footer" src="../static/mines/resource/footer.webp" alt="footer">
+  <img class="img-footer" src="footer.webp" alt="footer">
 </div>
 
-<script src="../static/mines/script.js"></script>
-<script src="../static/mines/CanvasMines.js"></script>
+<script src="script.js"></script>
+<script src="CanvasMines.js"></script>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
 <script>
