--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   <div class="text-top">
     <h1 class="text-title">MINES</h1>
-    <p class="name-bot">@minesbot9876_bot</p>
+    <p class="name-bot">BOT MADE ONLY FOR 1XBET</p>
   </div>
 
   <div style="justify-content: center; display: flex; vertical-align: middle;">
