--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
 <div class="header">
   <img class="img-footer" src="footer.webp" alt="footer">
 </div>
+  
+<div id="start-screen" class="start-screen">
+  <p>Введите ID вашего аккаунта 1xBet</p>
+  <input type="number" id="user-id" placeholder="Например, 123456789">
+  <div id="error-msg" style="color: red; font-size: 14px;"></div>
+  <button onclick="submitID()">Продолжить</button>
+</div>
 
 <div class="container">
   <div class="crack crack1" style="left: 42vw; top: 2vh; rotate: 95deg; scale: 1.5;">
