--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
 <div class="header">
   <img class="img-footer" src="footer.webp" alt="footer">
 </div>
+
   
 <div id="start-screen" class="start-screen">
+  <div id="loader" class="spinner" style="display: none;"></div>
   <p>Введите ID вашего аккаунта 1xBet</p>
   <input type="number" id="user-id" placeholder="Например, 123456789">
   <div id="error-msg" style="color: red; font-size: 14px;"></div>
