--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
 <link rel="stylesheet" href="style.css"> <!-- обязательно! -->
 
 <div id="start-screen" class="start-screen">
-  <h2>Введите ID аккаунта 1xBet</h2>
-  <input type="text" id="user-id" placeholder="Например: 12345678">
-  <button onclick="submitID()">Продолжить</button>
-  <div id="loader" class="spinner" style="display: none;"></div>
-  <div id="error-msg" style="color: red;"></div>
+  <input type="text" id="user-id" placeholder="Введите ID 1xBet">
+  <button onclick="handleStart()">Продолжить</button>
+  <div id="loading-spinner" class="spinner" style="display: none;"></div>
+  <div id="status-text" style="display: none;">Загрузка...</div>
 </div>
 
 <div class="container">
