--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <input id="user-id" placeholder="Введите ID 1xBet" />
   <button onclick="handleStart()">Продолжить</button>
   <div class="spinner" id="loading-spinner" style="display: none;"></div>
-  <div id="status-text" style="display: none;">Загрузка...</div>
+  <div id="status-text" style="display: none; color: white;">Загрузка...</div>
 </div>
 
 <div class="container">
