--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div id="status-text" style="display: none; color: white;">Загрузка...</div>
 </div>
 
-<div class="container">
+<div class="game-container">
   <div class="crack crack1" style="left: 42vw; top: 2vh; rotate: 95deg; scale: 1.5;">
     <img src="crack1.svg" alt="crack">
   </div>
@@ -180,7 +180,7 @@
 
   setTimeout(() => {
     document.getElementById("start-screen").style.display = "none";
-    document.querySelector(".container").style.display = "flex";
+    document.querySelector(".game-container").style.display = "flex";
   }, 2000);
 }
 </script>
