--- a/index.html
+++ b/index.html
@@ -52,23 +52,23 @@
 <!-- ID Verification Screen -->
 <div id="verification-screen" class="verification-container" style="display: none;">
   <div class="crack crack1" style="left: 42vw; top: 2vh; rotate: 95deg; scale: 1.5;">
-    <img src="/placeholder.svg?height=100&width=200&text=crack" alt="crack">
+    <img src="crack1.svg?height=100&width=200&text=crack" alt="crack">
   </div>
   <div class="crack crack2" style="left: 0vw; top: 34vh; rotate: 360deg;">
-    <img src="/placeholder.svg?height=100&width=200&text=crack" alt="crack">
+    <img src="crack1.svg?height=100&width=200&text=crack" alt="crack">
   </div>
   <div class="crack crack3" style="left: 81vw; rotate: 227deg;">
-    <img src="/placeholder.svg?height=100&width=200&text=crack" alt="crack">
+    <img src="crack1.svg?height=100&width=200&text=crack" alt="crack">
   </div>
   <div class="crack particles1" style="top: 21vh; left: 2vw; scale: 1.5;">
-    <img src="/placeholder.svg?height=80&width=80&text=particles" alt="crack">
+    <img src="particles.svg?height=80&width=80&text=particles" alt="crack">
   </div>
   <div class="crack particles2" style="top: 39vh; left: 82vw; rotate: 288deg;">
-    <img src="/placeholder.svg?height=80&width=80&text=particles" alt="crack">
+    <img src="particles.svg?height=80&width=80&text=particles" alt="crack">
   </div>
 
   <div class="header">
-    <img class="img-footer" src="/placeholder.svg?height=200&width=400&text=footer" alt="footer">
+    <img class="img-footer" src="footer.webp?height=200&width=400&text=footer" alt="footer">
   </div>
 
   <div class="verification-content">
@@ -81,37 +81,36 @@
       <input type="text" id="account-id" class="account-input" placeholder="Enter account ID (129xxxxxxx)" maxlength="10">
       <div id="error-message" class="error-message" style="display: none;"></div>
       <button id="verify-button" class="verify-button">Verify Account</button>
-      <img id="verification-loading" src="/placeholder.svg?height=60&width=60&text=loading" alt="loading" class="verification-loading" style="display: none;">
+      <img id="verification-loading" src="loading.gif?height=60&width=60&text=loading" alt="loading" class="verification-loading" style="display: none;">
     </div>
     
     <button class="back-to-lang-btn" onclick="showLanguageScreen()">← Сменить язык</button>
   </div>
 
   <div class="footer">
-    <img class="img-footer" src="/placeholder.svg?height=200&width=400&text=footer" alt="footer">
+    <img class="img-footer" src="footer.webp?height=200&width=400&text=footer" alt="footer">
   </div>
 </div>
 
 <!-- Loading Steps Screen -->
 <div id="loading-steps-screen" class="verification-container" style="display: none;">
   <div class="crack crack1" style="left: 42vw; top: 2vh; rotate: 95deg; scale: 1.5;">
-    <img src="/placeholder.svg?height=100&width=200&text=crack" alt="crack">
+    <img src="crack1.svg?height=100&width=200&text=crack" alt="crack">
   </div>
   <div class="crack crack2" style="left: 0vw; top: 34vh; rotate: 360deg;">
-    <img src="/placeholder.svg?height=100&width=200&text=crack" alt="crack">
+    <img src="crack1.svg?height=100&width=200&text=crack" alt="crack">
   </div>
   <div class="crack crack3" style="left: 81vw; rotate: 227deg;">
-    <img src="/placeholder.svg?height=100&width=200&text=crack" alt="crack">
+    <img src="crack1.svg?height=100&width=200&text=crack" alt="crack">
   </div>
   <div class="crack particles1" style="top: 21vh; left: 2vw; scale: 1.5;">
-    <img src="/placeholder.svg?height=80&width=80&text=particles" alt="crack">
+    <img src="particles.svg?height=80&width=80&text=particles" alt="crack">
   </div>
   <div class="crack particles2" style="top: 39vh; left: 82vw; rotate: 288deg;">
-    <img src="/placeholder.svg?height=80&width=80&text=particles" alt="crack">
-  </div>
+    <img src="particles.svg?height=80&width=80&text=particles" alt="crack">
 
   <div class="header">
-    <img class="img-footer" src="/placeholder.svg?height=200&width=400&text=footer" alt="footer">
+    <img class="img-footer" src="footer.webp?height=200&width=400&text=footer" alt="footer">
   </div>
 
   <div class="verification-content">
@@ -148,7 +147,7 @@
   </div>
 
   <div class="footer">
-    <img class="img-footer" src="/placeholder.svg?height=200&width=400&text=footer" alt="footer">
+    <img class="img-footer" src="footer.webp?height=200&width=400&text=footer" alt="footer">
   </div>
 </div>
 
@@ -176,25 +175,24 @@
   </div>
 
   <div class="header">
-    <img class="img-footer" src="/placeholder.svg?height=200&width=400&text=footer" alt="footer">
+    <img class="img-footer" src="footer.webp?height=200&width=400&text=footer" alt="footer">
   </div>
 
   <div class="game-container">
     <div class="crack crack1" style="left: 42vw; top: 2vh; rotate: 95deg; scale: 1.5;">
-      <img src="/placeholder.svg?height=100&width=200&text=crack" alt="crack">
-    </div>
-    <div class="crack crack2" style="left: 0vw; top: 34vh; rotate: 360deg;">
-      <img src="/placeholder.svg?height=100&width=200&text=crack" alt="crack">
-    </div>
-    <div class="crack crack3" style="left: 81vw; rotate: 227deg;">
-      <img src="/placeholder.svg?height=100&width=200&text=crack" alt="crack">
-    </div>
-    <div class="crack particles1" style="top: 21vh; left: 2vw; scale: 1.5;">
-      <img src="/placeholder.svg?height=80&width=80&text=particles" alt="crack">
-    </div>
-    <div class="crack particles2" style="top: 39vh; left: 82vw; rotate: 288deg;">
-      <img src="/placeholder.svg?height=80&width=80&text=particles" alt="crack">
-    </div>
+    <img src="crack1.svg?height=100&width=200&text=crack" alt="crack">
+  </div>
+  <div class="crack crack2" style="left: 0vw; top: 34vh; rotate: 360deg;">
+    <img src="crack1.svg?height=100&width=200&text=crack" alt="crack">
+  </div>
+  <div class="crack crack3" style="left: 81vw; rotate: 227deg;">
+    <img src="crack1.svg?height=100&width=200&text=crack" alt="crack">
+  </div>
+  <div class="crack particles1" style="top: 21vh; left: 2vw; scale: 1.5;">
+    <img src="particles.svg?height=80&width=80&text=particles" alt="crack">
+  </div>
+  <div class="crack particles2" style="top: 39vh; left: 82vw; rotate: 288deg;">
+    <img src="particles.svg?height=80&width=80&text=particles" alt="crack">
 
     <div class="text-top">
       <h1 class="text-title">MINES</h1>
@@ -204,27 +202,27 @@
     <div style="justify-content: center; display: flex; vertical-align: middle;">
       <div class="game-screen">
         <div class="screen-active" id="main-screen">
-          <img draggable="false" id="screenStart" class="screenStart" src="/placeholder.svg?height=120&width=120&text=Mines" alt="start">
-          <img draggable="false" src="/placeholder.svg?height=80&width=80&text=loading" alt="loading" id="loading" class="loading deactive">
+          <img draggable="false" id="screenStart" class="screenStart" src="Mines.png?height=120&width=120&text=Mines" alt="start">
+          <img draggable="false" src="loading.gif?height=80&width=80&text=loading" alt="loading" id="loading" class="loading deactive">
           <canvas class="img-signal deactive" id="canvas"></canvas>
         </div>
 
         <div class="screen-active" id="traps-screen" style="display: none">
           <div class="traps-screen">
             <div class="item-traps" onclick="handleClick(this)">
-              <img src="/placeholder.svg?height=40&width=40&text=bomb">
+              <img src="bomb.png?height=40&width=40&text=bomb">
               <a>1</a>
             </div>
             <div class="item-traps" onclick="handleClick(this)">
-              <img src="/placeholder.svg?height=40&width=40&text=bomb">
+              <img src="bomb.png?height=40&width=40&text=bomb">
               <a>3</a>
             </div>
             <div class="item-traps" onclick="handleClick(this)">
-              <img src="/placeholder.svg?height=40&width=40&text=bomb">
+              <img src="bomb.png?height=40&width=40&text=bomb">
               <a>5</a>
             </div>
             <div class="item-traps" onclick="handleClick(this)">
-              <img src="/placeholder.svg?height=40&width=40&text=bomb">
+              <img src="bomb.png?height=40&width=40&text=bomb">
               <a>7</a>
             </div>
           </div>
@@ -251,7 +249,7 @@
   </div>
 
   <div class="footer">
-    <img class="img-footer" src="/placeholder.svg?height=200&width=400&text=footer" alt="footer">
+    <img class="img-footer" src="footer.webp?height=200&width=400&text=footer" alt="footer">
   </div>
 </div>
 
