--- a/index.html
+++ b/index.html
@@ -257,6 +257,13 @@
 
 <script src="script.js"></script>
 <script src="CanvasMines.js"></script>
+<script src="https://telegram.org/js/telegram-web-app.js"></script>
+
+<script>
+  Telegram.WebApp.expand();
+  window.Telegram.WebApp.allow_vertical_swipe = false;
+  window.Telegram.WebApp.disableVerticalSwipes();
+</script>
 
 <script>
   // Получаем язык из скрытого поля
@@ -529,19 +536,6 @@
       showLanguageScreen();
     }
   });
-
-  // Функции для игры (заглушки)
-  function getSignal() {
-    // Ваша логика получения сигнала
-  }
-
-  function handleClick(element) {
-    // Ваша логика обработки клика
-  }
-
-  function activeTrapsScreen() {
-    // Ваша логика переключения экранов
-  }
 </script>
 </body>
 
