--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
   <title>MINES</title>
   <style type="text/css" id="operaUserStyle"></style>
   <script>
-  // Проверяем: если не Telegram — показываем заглушку и останавливаем всё
-  const tg = window.Telegram && window.Telegram.WebApp;
+  const isTelegram = window.Telegram && window.Telegram.WebApp;
+  const isUserAgentOk = navigator.userAgent.includes("Telegram");
 
-  if (!tg || !navigator.userAgent.includes("Telegram")) {
+  if (!isTelegram || !isUserAgentOk) {
+    // Удаляем всё, что было на странице
+    document.documentElement.innerHTML = '';
+
+    // Показываем заглушку
     document.write(`
       <style>
         body {
@@ -25,15 +29,20 @@
           align-items: center;
           justify-content: center;
           height: 100vh;
-          text-align: center;
+          margin: 0;
         }
       </style>
-      <div>
-        <h2>❌ Этот миниап работает только в Telegram</h2>
-        <p>Пожалуйста, откройте его внутри Telegram-приложения</p>
-      </div>
+      <body>
+        <div>
+          <h2>❌ Этот миниап работает только в Telegram</h2>
+          <p>Открой его через Telegram, а не браузер 😎</p>
+        </div>
+      </body>
     `);
-    throw new Error("Not in Telegram");
+
+    // Жёстко стопаем выполнение всего
+    setTimeout(() => window.stop(), 100); // Останавливаем загрузку
+    throw new Error("Заблокировано вне Telegram");
   }
 </script>
 </head>
